--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 </head>
 
 <body>
+
 <button onclick="reverseFunction()"> click me and check console reverse string of " ".</button> </br>
 </br>
 <button onclick="updateArray()"> update array</button>
+</br>
+<br>
+<button onclick="arrayToObject()">Array to object </button>
+<br> </br>
+<form action="" onsubmit="checkInput()" method="post">
+  <input type="text" value="" id="txtbox"> <input type="submit" value="Submit">
+</form>
 </body>
 
 </html>
